# coerp

./: .gitignore  latin_conf-scores.xlsx  pyproject.toml
assets/: element_types_in_corpus.txt  output_format_example.txt  questions_for_gerold.txt
coerp/: conf_score_filtering.py  export.py  export_corpus.py  main.py  normalization-extractor.py  restore-originals.py  scout_corpus.py
data/: notes.txt
data/bio/: bio_1510_More_R3  bio_1516_Hilton_R3  bio_1533_Anon_R3  bio_1544_Bale_R3  bio_1546_Askewe_Bale_R3  bio_1559_Hall_R3  bio_1561_Bennet_R3  bio_1564_Beze_R3  bio_1574_Merbecke_R3  bio_1583_Foxe_R3  bio_1591_Stubbes_R3  bio_1609_Featley_R3  bio_1612_Paule_R3  bio_1613_Cotton_R3  bio_1629_Carleton_R3  bio_1629_Harris_R3  bio_1651_Isaacson_R3  bio_1653_Fisher_R3  bio_1661_Fell_R3  bio_1671_Alleine_R3  bio_1673_Janeway_R3  bio_1681_Baxter_R3
data/catechism/: catechism_1579_Openshaw_and_Pagitt_R3  catechism_1585_Cotes_R3  catechism_1591_Perkins_R3  catechism_1597_Dering_R3  catechism_1601_Dent_R3  catechism_1606_Dent_R3  catechism_1630_Ball_R3  catechism_1631_Alleine_R3  catechism_1647_Westminster_Assembly_R3  catechism_1652_Jessey_R3  catechism_1665_Patrick_R3  catechism_1676_Anon_R3  catechism_1685_Ken_R3
data/pamphlet/: pamphlet_letter_1544_Bale_R2  pamphlet_letter_1547_Ulric_R2  pamphlet_letter_1548_Rhegius_R2  pamphlet_letter_1554_Sampson_R2  pamphlet_letter_1557_Becon_R2  pamphlet_letter_1566_Gilby_R2  pamphlet_letter_1586_Herbert_R2  pamphlet_letter_1599_Willet_R2  (+23 more)
output/: non_english.txt
test/: bio_1510_More_R3  export_test.txt  normalised.xml
(+279 files in other folders)
